<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CaseListActivity">

    <!-- App bar (toolbar) -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tac_navy"
        android:fitsSystemWindows="true"
        app:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/card_case" />

    <!-- Add Case FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_case"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="bottom|end"
        app:tint="@android:color/white"
        app:backgroundTint="@color/blue"
        app:elevation="6dp" />

    <!-- Floating button for toggling dark/light theme -->
    <!-- Placed above the add FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/themeFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/toggle_theme"
        android:src="@drawable/ic_dark_mode_24"
        android:layout_gravity="bottom|end"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="top|end"
        app:tint="@android:color/white"
        app:backgroundTint="@color/blue"
        app:elevation="6dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
